correcting text-align issue
missed a colon between text-align and center

--- a/custom.css
+++ b/custom.css
@@ -52,7 +52,7 @@ body > .container {
     text-shadow: 1px 1px 1px #111;
   }
 
-.well { text-align center; }
+.col-sm-4 { text-align: center; }
 
 /* Space out content a bit */
 body > .container {
